<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="presenter"
            type="com.example.godcode.presenter.Presenter" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="100dp"
            android:layout_marginTop="100dp"
            android:src="@drawable/logo" />

        <Button
            android:id="@+id/wxdl"
            style="@style/btn1"
            android:text="@string/wxdl" />

        <Button
            android:id="@+id/zhdl"
            style="@style/btn2"
            android:layout_marginTop="10dp"
            android:text="@string/zhdl" />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/step2regiter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="20dp"
                android:text="@string/zczh"
                android:textColor="#4e648b"
                android:textSize="15sp" />
        </RelativeLayout>


    </LinearLayout>
</layout>


