<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/tools">

    <data>

        <variable
            name="presenter"
            type="com.example.godcode.presenter.Presenter" />

        <variable
            name="today"
            type="String" />

        <variable
            name="yesterDay"
            type="String" />


    </data>


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            android:id="@+id/balance_toolbar"
            layout="@layout/layout_toolbar2"
            bind:presenter="@{presenter}" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:background="@color/theme_color"
                android:orientation="vertical"
                android:padding="10dp">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/zhye"
                    android:textColor="#fff" />

                <TextView
                    android:id="@+id/balance"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:textColor="#fff"
                    android:textSize="40sp" />

            </LinearLayout>

            <include
                android:id="@+id/balance_divide"
                layout="@layout/layout_income_deivide"
                bind:presenter="@{presenter}"
                bind:today="@{today}"
                bind:yesterDay="@{yesterDay}" />
        </LinearLayout>

        <include layout="@layout/layout_divider" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:background="@color/bg1"
            android:divider="@drawable/divider2"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:showDividers="middle">

            <com.example.godcode.ui.view.ImageTextView
                android:id="@+id/recharge"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:drawablePadding="10dp"
                android:gravity="center_vertical"
                android:text="@string/recharge"
                android:textSize="15sp"
                app:direcation="0"
                app:drawable="@drawable/recharge"
                app:drawableHeight="12dp"
                app:drawableWidth="12dp" />

            <com.example.godcode.ui.view.ImageTextView
                android:id="@+id/tx"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:drawablePadding="10dp"
                android:gravity="center_vertical"
                android:text="@string/withdraw"
                android:textSize="15sp"
                app:direcation="0"
                app:drawable="@drawable/tx"
                app:drawableHeight="12dp"
                app:drawableWidth="12dp" />

            <com.example.godcode.ui.view.ImageTextView
                android:id="@+id/balance_bank"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:drawablePadding="10dp"
                android:gravity="center_vertical"
                android:text="@string/bankAccount"
                android:textSize="15sp"
                app:direcation="0"
                app:drawable="@drawable/card"
                app:drawableHeight="12dp"
                app:drawableWidth="12dp" />

            <com.example.godcode.ui.view.ImageTextView
                android:id="@+id/balance_zz"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:drawablePadding="10dp"
                android:gravity="center_vertical"
                android:text="@string/transfer"
                android:textSize="15sp"
                app:direcation="0"
                app:drawable="@drawable/zz"
                app:drawableHeight="12dp"
                app:drawableWidth="12dp" />


            <com.example.godcode.ui.view.ImageTextView
                android:id="@+id/balance_jyjl"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:drawablePadding="10dp"
                android:gravity="center_vertical"
                android:onClick="@{()->presenter.step2Fragment(&quot;transationRecord&quot;)}"
                android:text="@string/transactionsDetail"
                android:textSize="15sp"
                app:direcation="0"
                app:drawable="@drawable/record_fill"
                app:drawableHeight="12dp"
                app:drawableWidth="12dp" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#f0eff5" />

    </LinearLayout>
</layout>